# Weave

./: BuildNotes.md  CMakeLists.txt  ReadMe.md  Weave.cpp  Weave.h  config
include/cli/: CommandDispatcher.h  CommandParser.h  ParsedCommand.h
include/cli/commandHandlers/: AddHandler.h  HelpHandler.h  ICommandHandler.h  InitHandler.h  RemoveHandler.h  TestHandler.h
include/cli/data/: CommandRegister.h  FlagRegister.h  ParsedCommand.h
include/core/add/: AddService.h
include/core/commandServices/: AddService.h  InitService.h  RemoveService.h
include/core/models/: RevlogDataStructures.h  WeaveStructures.h
include/core/revlog/: ChangeLogWriter.h  RepoInitializer.h
include/core/utils/: IOUtils.h
include/utils/: Logger.h
src/: main.cpp
src/cli/: CommandDispatcher.cpp  CommandParser.cpp
src/cli/commandHandlers/: AddHandler.cpp  HelpHandler.cpp  ICommandHandler.cpp  InitHandler.cpp  RemoveHandler.cpp  TestHandler.cpp
src/core/add/: AddService.cpp
src/core/commandServices/: AddService.cpp  InitService.cpp  RemoveService.cpp
src/core/init/: InitService.cpp
src/core/revlog/: ChangeLogWriter.cpp  RepoInitializer.cpp
src/core/utils/: IOUtils.cpp
